# serenity_commands

./: Cargo.toml  LICENSE.md  README.md
examples/e01_basic_ping_bot/: Cargo.toml
examples/e01_basic_ping_bot/src/: main.rs
serenity_commands/: Cargo.toml
serenity_commands/src/: error.rs  lib.rs
serenity_commands_derive/: Cargo.toml
serenity_commands_derive/src/: common.rs  lib.rs
serenity_commands_derive/src/command/: mod.rs  parse.rs
serenity_commands_derive/src/commands/: mod.rs  parse.rs
serenity_commands_derive/src/group/: mod.rs  parse.rs
