[package]
name = "serenity_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity_commands_derive = { path = "../serenity_commands_derive" }

[dependencies.serenity]
version = "0.10.10"
features = ["client", "model", "gateway", "cache", "rustls_backend", "unstable_discord_api"]
default-features = false
