[package]
name = "e01_basic_ping_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity_commands = { path = "../../serenity_commands" }
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
